--- a/index.teste.html
+++ b/index.teste.html
@@ -397,7 +397,7 @@
 </div>
 
 
-<script defer src="tron-ares.subdl.filmsonly.js"></script>
+<script defer src="tron-ares.js"></script>
 <script defer src="subdl-addon.js"></script>
 <script defer type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 <script>
