--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@
     </div>
     <div class="subsearch-row">
       <label class="subsearch-label" for="openSubtitlesApiKeyInput">Clé API OpenSubtitles</label>
-      <input id="openSubtitlesApiKeyInput" class="subsearch-input" type="password" placeholder="Colle ta clé OpenSubtitles ici" autocomplete="off" spellcheck="false">
+      <input id="openSubtitlesApiKeyInput" class="subsearch-input" type="password" placeholder="Colle ta clé OpenSubtitles ici" value="https://www.google.com/" autocomplete="off" spellcheck="false">
       <div class="subsearch-hint">Stockée localement (localStorage). Utile si tu passes un jour par l’API directe.</div>
     </div>
 
     <div class="subsearch-row">
       <label class="subsearch-label" for="subdlApiKeyInput">Clé API SubDL</label>
-      <input id="subdlApiKeyInput" class="subsearch-input" type="password" placeholder="Colle ta clé SubDL ici" autocomplete="off" spellcheck="false">
+      <input id="subdlApiKeyInput" class="subsearch-input" type="password" placeholder="Colle ta clé SubDL ici" value="https://www.google.com/" autocomplete="off" spellcheck="false">
       <div class="subsearch-hint">Stockée localement (localStorage). Utilisée par SubDL.</div>
     </div>
 
