--- a/index.html
+++ b/index.html
@@ -369,14 +369,20 @@
       </select>
     </div>
     <div class="subsearch-row">
+      <form>
       <label class="subsearch-label" for="openSubtitlesApiKeyInput">Clé API OpenSubtitles</label>
       <input id="openSubtitlesApiKeyInput" class="subsearch-input" type="text" placeholder="Colle ta clé OpenSubtitles ici" value="SZBnt9EmjgdlxNDUfeAl3A6GNxrdqOGU" autocomplete="off" spellcheck="false">
+      <input type="submit" value="Submit">
+      </form>
       <div class="subsearch-hint">Stockée localement (localStorage). Utile si tu passes un jour par l’API directe.</div>
     </div>
 
     <div class="subsearch-row">
+      <form>
       <label class="subsearch-label" for="subdlApiKeyInput">Clé API SubDL</label>
       <input id="subdlApiKeyInput" class="subsearch-input" type="text" placeholder="Colle ta clé SubDL ici" value="Xnraa63L8_tIV5ieHGl4EA1vGO0f5DIg" autocomplete="off" spellcheck="false">
+      <input type="submit" value="Submit">
+      </form>
       <div class="subsearch-hint">Stockée localement (localStorage). Utilisée par SubDL.</div>
     </div>
 
