--- a/index.subdl.apikey.v3.html
+++ b/index.subdl.apikey.v3.html
@@ -412,6 +412,8 @@
 
 
 <script defer src="tron-ares.js"></script>
+<script defer src="subdl-lang-sync.js"></script>
+<script defer src="subdl-lang-sync.apikey.v3.js"></script>
 
 <script defer type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 <script>
