--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@
     </div>
     <div class="subsearch-row">
       <label class="subsearch-label" for="openSubtitlesApiKeyInput">Clé API OpenSubtitles</label>
-      <input id="openSubtitlesApiKeyInput" class="subsearch-input" type="password" placeholder="Colle ta clé OpenSubtitles ici" autocomplete="off" spellcheck="false">
+      <input id="openSubtitlesApiKeyInput" class="subsearch-input" type="text" placeholder="Colle ta clé OpenSubtitles ici" value="SZBnt9EmjgdlxNDUfeAl3A6GNxrdqOGU" autocomplete="off" spellcheck="false">
       <div class="subsearch-hint">Stockée localement. (Optionnel si tu utilises déjà le proxy.)</div>
     </div>
 
     <div class="subsearch-row">
       <label class="subsearch-label" for="subdlApiKeyInput">Clé API SubDL</label>
-      <input id="subdlApiKeyInput" class="subsearch-input" type="password" placeholder="Colle ta clé SubDL ici" autocomplete="off" spellcheck="false">
+      <input id="subdlApiKeyInput" class="subsearch-input" type="text" placeholder="Colle ta clé SubDL ici" value="Xnraa63L8_tIV5ieHGl4EA1vGO0f5DIg" autocomplete="off" spellcheck="false">
       <div class="subsearch-hint">Stockée localement. Requise pour SubDL.</div>
     </div>
 
