--- a/index.html
+++ b/index.html
@@ -441,6 +441,8 @@
 
 
 <script defer src="tron-ares.js"></script>
+<script defer src="subdl-lang-sync.js"></script>
+<script defer src="subdl-lang-sync.apikey.v4.js"></script>
 
 <script defer type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 <script>
