--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 </div>
 
 
-<script defer src="tron-ares.js"></script>
+<script defer src="tron-ares.js?v=20260202-1"></script>
 <script defer src="subdl-lang-sync.js"></script>
 <script defer src="subdl-lang-sync.apikey.v6.js"></script>
 
